--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html ng-app="myApp">
+<head>
+    <meta charset="UTF-8">
+    <title>My AngularJS App</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
+    <script src="app.js"></script>
+</head>
+<body>
+    <div ng-controller="myController">
+        <h1>Welcome to my AngularJS App!</h1>
+        <!-- Your AngularJS code goes here -->
+    </div>
+</body>
+</html>
