--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div ng-controller="myController">
-        <h1>Welcome tofffff my AngularJS App!</h1>
+        <h1>Welcome to my AngularJS App!</h1>
         <!-- Your AngularJS code goes here -->
     </div>
 </body>
